--- a/MainPage.html
+++ b/MainPage.html
@@ -9,9 +9,10 @@
 <ul> 
 <li>Indian food</li>
 <li>Mexican food( </li>
-<li>sushi</li>
-<li>Chinese food</li>
-<li> American food</li>
+<li>Japenese Food</li>
+<li>Chinese Food</li>
+<li>American Food</l>
+<li>Thai Food </li>
 </ul>
 <p2>
 
