--- a/MainPage.html
+++ b/MainPage.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html> 
 <head> 
-<title>Welcome to CrAZy Food!</title<>
+<title>Welcome to CrAZy Food!</title>
 </head>
 <body>
 <h5>These are CrAZy recipes. They can make anything healthier and taste better.<h5>
@@ -16,7 +17,8 @@
 </ul>
 <h1> aref
 </h1>
-
+</body>
+</html>
 
 
 
