--- a/MainPage.html
+++ b/MainPage.html
@@ -15,7 +15,7 @@
 <li>American Food</l>
 <li>Thai Food </li>
 </ul>
-<h1> aref
+< link rel="sytlesheet" type=text/css" href="style.css">
 </h1>
 </body>
 </html>
