--- a/MainPage.html
+++ b/MainPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
-<head> 
+<head>
+<link rel="stylesheet" type=text/css" href="style.css">
 <title>Welcome to CrAZy Food!</title>
 </head>
 <body>
@@ -15,7 +16,6 @@
 <li>American Food</l>
 <li>Thai Food </li>
 </ul>
-< link rel="sytlesheet" type=text/css" href="style.css">
 </h1>
 </body>
 </html>
