--- a/MainPage.html
+++ b/MainPage.html
@@ -5,7 +5,7 @@
 <title>Welcome to CrAZy Food!</title>
 </head>
 <body>
-<h5>These are CrAZy recipes. They can make anything healthier and taste better.<h5>
+<h5>These are CrAZy recipes. They can make anything healthier and taste better.</h5>
 <h5>Though I am not a health freak so if you are looking for those kind of people.................< h5> 
 <p2>The best foods to try are ...........</p2>
 <ul> 
