--- a/MainPage.html
+++ b/MainPage.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html> 
 <head>
-<link rel="stylesheet" type=text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>Welcome to CrAZy Food!</title>
 </head>
 <body>
 <h5>These are CrAZy recipes. They can make anything healthier and taste better.</h5>
-<h5>Though I am not a health freak so if you are looking for those kind of people.................< h5> 
+<h5>Though I am not a health freak so if you are looking for those kind of people.................</h5> 
 <p2>The best foods to try are ...........</p2>
 <ul> 
 <li>Indian food</li>
 <li>Mexican food( </li>
 <li>Japenese Food</li>
 <li>Chinese Food</li>
-<li>American Food</l>
+<li>American Food</li>
 <li>Thai Food </li>
 </ul>
-</h1>
 </body>
 </html>
 
