--- a/MainPage.html
+++ b/MainPage.html
@@ -10,7 +10,7 @@
 <p2>The best foods to try are ...........</p2>
 <ul> 
 <li>Indian food</li>
-<li>Mexican food( </li>
+<li>Mexican food</li>
 <li>Japenese Food</li>
 <li>Chinese Food</li>
 <li>American Food</li>
